Fix discover on small browser.

--- a/app/styles/_grid.scss
+++ b/app/styles/_grid.scss
@@ -1,4 +1,9 @@
 
+.center-on-collapse{
+	@media (max-width: 700px) {
+		text-align: center;
+	}
+}
 
 .grid-post {
 	
@@ -6,7 +11,7 @@
 	text-align: left;
 	
 	@media (max-width: 700px) {
-		display:block;
+		//display:block;
 	}
 
 	border: 1px solid green;
